--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,15 @@ group = 'raisetech'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+	sourceCompatibility = '21'
+	//toolchain {
+		//languageVersion = JavaLanguageVersion.of(21)
+	//}
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
 	}
 }
 
