--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=StudentManagement
-spring.datasource.url=jdbc:mysql://studentmanagementdb.c7i4kio48lot.ap-northeast-1.rds.amazonaws.com:3308/StudentManagement
+spring.datasource.url=jdbc:mysql://localhost:3308/StudentManagement
 spring.datasource.username=root
 spring.datasource.password=J#8kL@5z9Xq2!W
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
