CD設定を追加_修正

--- a/.github/workflows/JavaTest.yml
+++ b/.github/workflows/JavaTest.yml
@@ -58,6 +58,7 @@ jobs:
           cat <<EOL | sudo tee /etc/systemd/system/StudentManagement.service
           [Unit]
           Description=StudentManagement App
+          After=network.target
           
           [Service]
           ExecStart=java -jar ${DEST_PATH}
